--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Contestant.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Contestant.html
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contestant.html">
+                        <a class="nav-link active" href="Contestant.html">
                             <span class="icon"><i class="fa-solid fa-users"></i></span>
                             <span class="title">Contestant</span>
                         </a>     
