--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
@@ -58,7 +58,7 @@
                     <ul class="nav flex-column ms-3">
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="Criteria.html">
+                            <a class="nav-link active" href="Criteria.html">
                                 <span class="icon"><i class="fa-solid fa-file-circle-check"></i></span>
                                 <span class="title">Criteria</span>
                             </a>
