--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Print.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Print.html
@@ -101,7 +101,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="Print.html">
+            <a class="nav-link active" href="Print.html">
                 <span class="icon"><i class="fa-solid fa-print"></i></span>
                 <span class="title">Print</span>
             </a>
