--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/course.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/course.html
@@ -86,7 +86,7 @@
 
          
         <li class="nav-item">
-            <a class="nav-link" href="Course.html">
+            <a class="nav-link active" href="Course.html">
                 <span class="icon"><i class="fa-solid fa-table-list"></i></span>
                 <span class="title">Course</span>
             </a>
