--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Scores.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Scores.html
@@ -105,7 +105,7 @@
          
         
         <li class="nav-item">
-            <a class="nav-link" href="Scores.html">
+            <a class="nav-link active" href="Scores.html">
                 <span class="icon"><i class="fa-solid fa-pen-to-square"></i></span>
                 <span class="title">Scores</span>
             </a>
