--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
@@ -35,10 +35,44 @@
             <ul>
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
                 <li><a href="#"><i class="fas fa-bell"></i></a></li>
-                <li><a href="#"><i class="fas fa-user"></i></a></li>
+                <li><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#logoutModal"><i class="fas fa-user"></i></a></li>
             </ul>
         </div>
     </div>
+
+     <!-- Logout Modal with Light Theme -->
+<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content bg-light text-dark border border-white shadow-sm">
+  
+        <!-- Modal Header -->
+        <div class="modal-header border-bottom">
+          <h4 class="modal-title text-light" id="logoutModalLabel">Profile Info</h4>
+          <button type="button" class="btn-close white-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+  
+        <!-- Modal Body with Profile Info -->
+        <div class="modal-body text-center">
+          <div class="mb-3">
+            <i class="fas fa-user-circle fa-3x text-light"></i>
+          </div>
+          <h4 class="mb-0 text-light">John Doe</h4> <!-- Replace with dynamic name -->
+          <small class="text-secondary">john.doe@example.com</small> <!-- Replace with email -->
+          <hr>
+          <p class="text-light">This is Who We Are</p>
+        </div>
+  
+        <!-- Modal Footer -->
+        <div class="modal-footer border-top">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+          <form action="/logout" method="POST">
+            <button type="submit" class="btn btn-danger">Logout</button>
+          </form>
+        </div>
+  
+      </div>
+    </div>
+  </div>
 
     <div class="sidebar">
         <ul class="nav flex-column">
