--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/dashboard.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/dashboard.html
@@ -58,8 +58,8 @@
          <div class="mb-3">
            <i class="fas fa-user-circle fa-3x text-light"></i>
          </div>
-         <h4 class="mb-0 text-light">John Doe</h4> <!-- Replace with dynamic name -->
-         <small class="text-secondary">john.doe@example.com</small> <!-- Replace with email -->
+         <h4 class="mb-0 text-light">Jonathan</h4> <!-- Replace with dynamic name -->
+         <small class="text-secondary">jonathan@gmail.com</small> <!-- Replace with email -->
          <hr>
          <p class="text-light">This is Who We Are</p>
        </div>
