--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
@@ -149,7 +149,7 @@
                      </div>
                      <div class="col-sm-6 ">
                         <ol class="breadcrumb float-sm-right ">
-                           <li class="breadcrumb-item"><a href="#">Home</a></li>
+                           <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
                            <li class="breadcrumb-item active text-light">Criteria</li>
                         </ol>
                      </div>
