--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/course.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/course.html
@@ -36,44 +36,68 @@
         <ul>
             <li><a href="#"><i class="fas fa-search"></i></a></li>
             <li><a href="#"><i class="fas fa-bell"></i></a></li>
-            <li><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#logoutModal"><i class="fas fa-user"></i></a></li>
-        </ul>
+            <li><a href="#" class="nav-link" id="profile-float-trigger"><i class="fas fa-user"></i></a></li>
+</ul>
+</div>
+</div>
+
+
+<div class="profile-info-floating" id="profile-info-float">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-dark border border-secondary shadow-sm rounded">
+
+            <div class="modal-header border-bottom py-1 bg-secondary">
+                <h6 class="modal-title text-light bg-secondary ms-2" id="logoutModalLabel">Profile Info</h6>
+                <button type="button" class="btn-close white-close me-3" id="close-profile-float" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body text-center py-4 ">
+                <div class="mb-0">
+                    <i class="fas fa-user-circle fa-5x text-light "></i>
+                </div>
+                <h3 class="mb-30 text-secondary py-2">Jonathan</h3> <small class="text-secondary">jonathan@gmail.com</small> <hr>
+                <p class="text-light">This is Who We Are</p>
+            </div>
+
+            <div class="modal-footer border-top justify-content-center py-3">
+                <button type="button" class="btn btn-outline-secondary btn-sm" id="cancel-profile-float">Cancel</button>
+                <form action="/logout" method="POST">
+                    <button type="submit" class="btn btn-secondary btn-sm ms-2">Logout</button>
+                </form>
+            </div>
+
+        </div>
     </div>
 </div>
 
-   <!-- Logout Modal with Light Theme -->
-<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content bg-light text-dark border border-white shadow-sm">
-  
-        <!-- Modal Header -->
-        <div class="modal-header border-bottom">
-          <h4 class="modal-title text-light" id="logoutModalLabel">Profile Info</h4>
-          <button type="button" class="btn-close white-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-  
-        <!-- Modal Body with Profile Info -->
-        <div class="modal-body text-center">
-          <div class="mb-3">
-            <i class="fas fa-user-circle fa-3x text-light"></i>
-          </div>
-          <h4 class="mb-0 text-light">Jonathan</h4> <!-- Replace with dynamic name -->
-          <small class="text-secondary">jonathan@gmail.com</small> <!-- Replace with email -->
-          <hr>
-          <p class="text-light">This is Who We Are</p>
-        </div>
-  
-        <!-- Modal Footer -->
-        <div class="modal-footer border-top">
-          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-          <form action="/logout" method="POST">
-            <button type="submit" class="btn btn-danger">Logout</button>
-          </form>
-        </div>
-  
-      </div>
-    </div>
-  </div>
+
+<script>
+    const profileTrigger = document.getElementById('profile-float-trigger');
+    const profileInfoFloat = document.getElementById('profile-info-float');
+    const closeProfileFloatButton = document.getElementById('close-profile-float');
+    const cancelProfileFloatButton = document.getElementById('cancel-profile-float');
+
+    profileTrigger.addEventListener('click', () => {
+        profileInfoFloat.style.display = profileInfoFloat.style.display === 'none' ? 'block' : 'none';
+    });
+
+    // Close the floating profile info when the close button is clicked
+    closeProfileFloatButton.addEventListener('click', () => {
+        profileInfoFloat.style.display = 'none';
+    });
+
+    // Close the floating profile info when the cancel button is clicked
+    cancelProfileFloatButton.addEventListener('click', () => {
+        profileInfoFloat.style.display = 'none';
+    });
+
+    // Optional: Close when clicking outside
+    document.addEventListener('click', (event) => {
+        if (!profileInfoFloat.contains(event.target) && event.target !== profileTrigger) {
+            profileInfoFloat.style.display = 'none';
+        }
+    });
+</script>
   
   <div class="sidebar">
     <ul class="nav flex-column">
