--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Judge.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Judge.html
@@ -130,8 +130,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="Judge.html">
-                    <span class="icon"><i class="fa-solid fa-gavel"></i></span>
-                    <span class="title">Judge</span>
+                    <span class="icon "><i class="fa-solid fa-gavel"></i></span>
+                    <span class="title bg-black">Judge</span>
                 </a>
             </li>
             <li class="nav-item">
