--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Print.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Print.html
@@ -159,7 +159,7 @@
         <li class="nav-item">
             <a class="nav-link active" href="Print.html">
                 <span class="icon"><i class="fa-solid fa-print"></i></span>
-                <span class="title">Print</span>
+                <span class="title bg-black">Print</span>
             </a>
         </li>
     </ul>
