--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/dashboard.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/dashboard.html
@@ -106,8 +106,8 @@
     <ul class="nav flex-column">
         <li class="nav-item">
             <a class="nav-link active" href="dashboard.html">
-                <span class="icon"><i class="fa-solid fa-chart-line"></i></span>
-                <span class="title">Dashboard</span>
+                <span class="icon"><i class="fa-solid fa-chart-line bg-black"></i></span>
+                <span class="title bg-black">Dashboard</span>
             </a>
         </li>
 
