--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Contestant.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Contestant.html
@@ -171,7 +171,7 @@
         <li class="nav-item">
             <a class="nav-link" href="Course.html">
                 <span class="icon"><i class="fa-solid fa-table-list"></i></span>
-                <span class="title">Course</span>
+                <span class="title bg-black">Course</span>
             </a>
         </li>
          
