--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Criteria.html
@@ -123,7 +123,7 @@
             <li class="nav-item">
                 <a class="nav-link active" href="Criteria.html">
                     <span class="icon"><i class="fa-solid fa-file-circle-check"></i></span>
-                    <span class="title">Criteria</span>
+                    <span class="title bg-black">Criteria</span>
                 </a>
             </li>
             <li class="nav-item">
