--- a/Project_System-main/Project_System-main-main/Project_System-main/admin/Scores.html
+++ b/Project_System-main/Project_System-main-main/Project_System-main/admin/Scores.html
@@ -161,10 +161,10 @@
         </li>
          
         
-        <li class="nav-item">
-            <a class="nav-link active" href="Scores.html">
+        <li class="nav-item ">
+            <a class="nav-link active" href="Scores.html ">
                 <span class="icon"><i class="fa-solid fa-pen-to-square"></i></span>
-                <span class="title">Scores</span>
+                <span class="title bg-black">Scores</span>
             </a>
         </li>
         <li class="nav-item">
